# Portfolio

./: .$vc database.drawio.bkp  .gitignore  3d-sandbox.html  3d-sandbox.js  3js-sandbox.html  3js-sandbox.js  babylonjs-sandbox.html  babylonjs-sandbox.js  index.html  main.js
.github/workflows/: azure-static-web-apps-agreeable-plant-021ac6c10.yml  azure-static-web-apps-green-dune-0a4434b1e.yml  azure-static-web-apps-nice-dune-009fe201e.yml  main_samd94.yml
3D graphics/sandbox/: ameriquartz7121standard.mtl  index.html  main.js
3D graphics/verge3d_apps/6130/: visual_logic.js  visual_logic.xml
3D_graphics/sandbox/: ameriquartz7121standard.gltf
3D_graphics/verge3d_blender/: package.json
C#/Hello World/: Program.cs
C#/Shapes/: Program.cs  Shapes.csproj  circular.cs  quadrilateral.cs  shape.cs  triangle.cs
C++/: .gitignore
C++/Roman Numerals/: a.out  roman_num.cpp
C++/Shapes/: main.cpp  makefile  menu.cpp  menu.h  shape.cpp  shape.h  shapes.out
C/Hello World/: a.out  hello.c
C/Tutorials/: pointers  pointers.c
Python/Shapes/: shapes.py
Python/Unit converter/: unit-converter.py
Qt/: .$Untitled Diagram.drawio.bkp
Qt/quick/sandbox/sandbox/: CMakeLists.txt  Main.qml  main.cpp
Ruby/Hello World/: hello.rb
Rust/Hello World/: hello  hello.rs
SQL/VC Comparison/: create-tables.sql  insert-consoles.sql  insert-nes.sql  insert-snes.sql
Web/React/: index.html
Web/WebPortfolio/: WebPortfolio.code-workspace  index.html  logo.FCStd  logo.FCStd1  style.css
design docs/: .$vc database.drawio.bkp  .$vc database.drawio.dtmp  vc database.drawio
(+1593 files in other folders)
